# brain

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SYNC.md  index.js  openclaw.plugin.json  package-lock.json  package.json
personas/: hormozi.brain.json  karpathy.brain.json
src/: auto_mount.rs  autosync.rs  brain.rs  cli.rs  db.js  embed.js  index_dirty.rs  lib.rs  main.rs  mcp.js  qmd_collection.rs  remember.rs  search_backend.rs  serve_lock.rs  source_config.rs  source_mirror.rs  watcher.rs  worker.rs
src/commands/: doctor.rs  hub.rs  index.rs  init.rs  join.rs  mod.rs  serve.rs  snapshot.rs  source.rs  sync.rs
system-knowledge/: brain-openclaw.json  brain.json
tests/: integration.rs  v03_lane_a.rs  v03_lane_b.rs  v03_lane_c.rs  v03_lane_d.rs
