[package]
name = "brainmd"
version = "0.2.1"
edition = "2024"
description = "MCP-served aggregator of AI artifacts. PARA-structured second brain that mounts Claude Code, gstack, and other AI-tool memory via symlink sources."
license = "MIT"
readme = "README.md"
repository = "https://github.com/0xyaya/brain"
keywords = ["mcp", "para", "second-brain", "ai-tools", "knowledge-management"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "brain"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
tar = "0.4"
zstd = "0.13"
urlencoding = "2.1"

# MCP server (brain serve, v0.2)
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
